Trying to align the box correctly

--- a/Lab2/styles.css
+++ b/Lab2/styles.css
@@ -47,6 +47,7 @@ order: 2;
 #flex-section3 .box {
 	display: flex;
 	justify-content: center;
+	align-items: flex-start;
 }
 
 #flex-section3 .tags ul {
